2016-07-12  Markus Gans  <guru.mail@muenster.de>
	* The status bar and the menu bar insert now the accelerator keys 
	  into the global scope of the root widget

2016-07-10  Markus Gans  <guru.mail@muenster.de>
	* Remove obsolete code from FDialog destructor
	* FDialog focus fix

2016-07-08  Markus Gans  <guru.mail@muenster.de>
	* Better code readability: control structures (if/else, while, switch) 
	  are now separated by a blank line.

2016-07-06  Markus Gans  <guru.mail@muenster.de>
	* Stop terminal updates during processCloseWidget() is working

2016-07-03  Markus Gans  <guru.mail@muenster.de>
	* Add the new class FDialogListMenu to switch between dialog menus
	* More consistent method names: 
	  rename parentWidget() to getParentWidget()

2016-06-27  Markus Gans  <guru.mail@muenster.de>
	* Fix the use-after-free bug for previous_widget

2016-06-26  Markus Gans  <guru.mail@muenster.de>
	* Bug fix for FWindow::activatePrevWindow()

2016-06-25  Markus Gans  <guru.mail@muenster.de>
	* Move processNextEvent() code into sub functions

2016-06-22  Markus Gans  <guru.mail@muenster.de>
	* Adding required updateTerminal() calls for FMenuBar

2016-06-19  Markus Gans  <guru.mail@muenster.de>
	* Clear status bar text in FMenuBar::leaveMenuBar()
	* Fixes some status bar update issues and focus problems

2016-06-18  Markus Gans  <guru.mail@muenster.de>
	* Improved status bar text updating at window change

2016-06-16  Markus Gans  <guru.mail@muenster.de>
	* Bug fix in FTerm updateVTerm() for updates from vdesktop
	* Bug fix in FDialog onWindowActive() for combined setFocus() 
	  and activateWindow()

2016-06-13  Markus Gans  <guru.mail@muenster.de>
	* Improved title bar menu integration

2016-06-12  Markus Gans  <guru.mail@muenster.de>
	* Add a title bar menu to close dialogs

2016-05-24  Markus Gans  <guru.mail@muenster.de>
	* Use nl_langinfo to determine the numeric thousands separator 
	  for Fstring::setFormatedNumber as default parameter
