@@ -177,8 +177,11 @@ Class digramm
                    : :                      │     ┌───┤ FMenuBar │       :
                    : :    ┌───────────┐     └─────┤   └──────────┘       :
                    : :    │ FMenuList │◄──────────┤   ┌───────┐          :
-                   : :    └────┬──────┘           └───┤ FMenu │          :
-                   : :         :                      └───────┘          :
+                   : :    └────┬──────┘           └───┤ FMenu │◄──┐      :
+                   : :         :                      └───────┘   │      :
+                   : :         :            ┌─────────────────┐   │      :
+                   : :         :            │ FDialogListMenu ├───┘      :
+                   : :         :            └─────────────────┘          :
                    : :        1:                    ┌────────────────┐*  :
                    : :         : *┌───────────┐  ┌──┤ FCheckMenuItem ├-┐ :
                    : :         ├--┤ FMenuItem │◄─┤  └────────────────┘ : :
