@@ -1,3 +1,6 @@
+2016-07-13  Markus Gans  <guru.mail@muenster.de>
+	* Bind accelerator key from the FMenuItem to the root widget
+
 2016-07-12  Markus Gans  <guru.mail@muenster.de>
 	* The status bar and the menu bar insert now the accelerator keys 
 	  into the global scope of the root widget
